2007-08-29  Paolo Bonzini  <bonzini@gnu.org>

PR target/33168
        * config/rs6000/rs6000.c (compare_section_name): New function.
        (rs6000_elf_in_small_data_p): Compare section prefixes instead
        of full name.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127910 138bc75d-0d04-0410-961f-82ee72b054a4